--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -1,1 +1,4 @@
+@import url(./__initial-message/main__initial-message.css);
 @import url(./__cards-container/main__cards-container.css);
+@import url(./__btn/main__btn.css);
+
