load more btn works

--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -1,4 +1,5 @@
 @import url(./__initial-message/main__initial-message.css);
 @import url(./__cards-container/main__cards-container.css);
 @import url(./__btn/main__btn.css);
+@import url(./__results-not-found/main__results-not-found.css);
 
