--- a/src/blocks/loader/loader.css
+++ b/src/blocks/loader/loader.css
@@ -12,6 +12,7 @@
   text-indent: -9999em;
   margin: 88px auto;
   position: relative;
+  top: 30%;
   font-size: 11px;
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
