--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 @import url(./blocks/btn/btn.css);
 @import url(./blocks/loader/loader.css);
 @import url(./blocks/loader-container/loader-container.css);
+@import url(./blocks/book-info/book-info.css);
+@import url(./blocks/close/close.css);
 
 
 
