--- a/src/blocks/book-card/__description/book-card__description.css
+++ b/src/blocks/book-card/__description/book-card__description.css
@@ -1,7 +1,7 @@
 .book-card__description{
-    margin-top: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 51%;
+    width: 100%;
+    color:black;
+    background: white;
+    min-height:50%;
+    margin-bottom: 20px;
 }
