--- a/src/blocks/book-card/book-card.css
+++ b/src/blocks/book-card/book-card.css
@@ -2,6 +2,7 @@
 @import url(./__description/book-card__description.css);
 @import url(./__category/book-card__category.css);
 @import url(./__author/book-card__author.css);
+@import url(./__details/book-card__details.css);
 
 .book-card{
     width: 282px;
@@ -10,4 +11,5 @@
     min-height: 360px;
     padding: 15px;
     box-sizing: border-box;
+    cursor: pointer;
 }
