--- a/src/blocks/main/__message/main__message.css
+++ b/src/blocks/main/__message/main__message.css
@@ -1,5 +1,7 @@
-.main__initial-message{
+.main__message{
     margin-top: 30px;
     width: 100%;
     text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
